@@ -90,6 +90,7 @@ extern Tcl_ObjCmdProc
     NsTclCryptObjCmd,
     NsTclDeleteCookieObjCmd,
     NsTclDummyObjCmd,
+    NsTclTlsObjCmd,
     NsTclEnvObjCmd,
     NsTclFTruncateObjCmd,
     NsTclGetAddrObjCmd,
@@ -276,6 +277,7 @@ static Cmd basicCmds[] = {
     {"ns_cancel", NULL, NsTclCancelObjCmd},
     {"ns_charsets", NsTclCharsetsCmd, NULL},
     {"ns_cleanup", NULL, NsTclDummyObjCmd},
+    {"ns_tls", NULL, NsTclTlsObjCmd},
     {"ns_config", NsTclConfigCmd, NULL},
     {"ns_configsection", NsTclConfigSectionCmd, NULL},
     {"ns_configsections", NsTclConfigSectionsCmd, NULL},
